--- a/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
+++ b/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
@@ -582,60 +582,25 @@
                                 <div class="well"> 
                                     <div class="row">
                                         <form>
-                                            <div class="col-lg-4">
-                                                <h3>Features</h3>
-                                                <label>Attestation</label>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.attestation_host.checked" disabled/>Host BIOS, kernel, initrd, hypervisor</label>
-                                                </div>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.attestation_host_xm.checked" disabled/>Host apps, drivers, configuration</label>
-                                                </div>
-                                                <label>Workload Protection</label>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.attestation_vm.checked" disabled/>VM integrity</label>
-                                                </div>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.encryption_vm.checked" disabled/>VM encryption</label>
-                                                </div>
-                                                <label>Integrations</label>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.integration_openstack_nova.checked" disabled/>OpenStack Nova &amp; Horizon</label>
-                                                    <!-- <p>Nova trust scheduler and patches to Horizon to expose trust in dashboard</p> -->
-                                                </div>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.integration_openstack_glance.checked" disabled>OpenStack Glance</label>
-                                                    <!-- <p>Nova trust scheduler and patches to Horizon to expose trust in dashboard</p> -->
-                                                </div>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.integration_openstack_barbican.checked" disabled>OpenStack Barbican Key Server</label>
-                                                    <!-- <p>Use OpenStack Barbican as the key server for VM encryption</p> -->
-                                                </div>
-                                                <div class="checkbox">
-                                                    <label><input type="checkbox" data-bind="checked: features.integration_kmip.checked" disabled>KMIP-compatible Key Server</label>
-                                                    <!-- <p>Use a KMIP-compatible key server for VM encryption</p> -->
-                                                </div>
-
-                                            </div>
-                                            <div class="col-lg-4">
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 
 
                                                 <h3>Environment</h3>
-                                                <div class="radio">
+                                                <div class="radio" data-bind="visible: environment.network_role() == 'PRIVATE'">
                                                     <label><input type="radio" name="preview_network_role" value="PRIVATE" data-bind="checked: environment.network_role" disabled/>Private Network (Enterprise or Datacenter)</label>
                                                     <p class="hint">All components will be installed for an stand-alone deployment</p>
                                                 </div>
-                                                <div class="radio">
+                                                <div class="radio" data-bind="visible: environment.network_role() == 'PROVIDER'">
                                                     <label><input type="radio" name="preview_network_role" value="PROVIDER" data-bind="checked: environment.network_role" disabled/>Cloud Service Provider</label>
                                                     <p class="hint">Installs Intel&reg; Cloud Integrity Technology attestation server, Trust Director (for host attestation), OpenStack integration (if applicable), Key Broker Proxy (if applicable)</p>
                                                 </div>
-                                                <div class="radio">
+                                                <div class="radio" data-bind="visible: environment.network_role() == 'SUBSCRIBER'">
                                                     <label><input type="radio" name="preview_network_role" value="SUBSCRIBER" data-bind="checked:environment. network_role" disabled/>Enterprise</label>
                                                     <p class="hint">Installs Trust Director (for workload attestation), Key Broker (if applicable)</p>
                                                 </div>
 
                                             </div>
-                                            <div class="col-lg-4">
+                                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 
                                                 <h3>Layout</h3>
                                                 <!--
@@ -644,11 +609,11 @@
                                                   <p>All components will be installed on a single host or VM. This is the simplest option, but not recommended for production.</p>
                                                 </div>
                                                 -->
-                                                <div class="radio">
+                                                <div class="radio" data-bind="visible: environment.layout() == 'SINGLE_HOST'">
                                                     <label><input type="radio" name="preview_layout" value="SINGLE_HOST" data-bind="checked: environment.layout" disabled/>All-in-one, remote host</label>
                                                     <p class="hint">All components will be installed on a single host or VM. This is the simplest option, but not recommended for production.</p>
                                                 </div>
-                                                <div class="radio">
+                                                <div class="radio" data-bind="visible: environment.layout() == 'ONE_PACKAGE_PER_HOST'">
                                                     <label><input type="radio" name="preview_layout" value="ONE_PACKAGE_PER_HOST" data-bind="checked: environment.layout"/>One package per remote host</label>
                                                     <p class="hint">Each component will be installed on a separate host or VM.</p>
                                                 </div>
@@ -661,6 +626,48 @@
                                                 </div>
                                                 -->
 
+                                            </div>
+                                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                <h3>Features</h3>
+                                                <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" data-bind="visible: features.attestation_host.checked() || features.attestation_host_xm.checked()">
+                                                <label>Attestation</label>
+                                                <div class="checkbox" data-bind="visible: features.attestation_host.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.attestation_host.checked" disabled/>Host BIOS, kernel, initrd, hypervisor</label>
+                                                </div>
+                                                <div class="checkbox" data-bind="visible: features.attestation_host_xm.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.attestation_host_xm.checked" disabled/>Host apps, drivers, configuration</label>
+                                                </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" data-bind="visible: features.attestation_vm.checked() || features.encryption_vm.checked()">
+                                                <label>Workload Protection</label>
+                                                <div class="checkbox" data-bind="visible: features.attestation_vm.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.attestation_vm.checked" disabled/>VM integrity</label>
+                                                </div>
+                                                <div class="checkbox" data-bind="visible: features.encryption_vm.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.encryption_vm.checked" disabled/>VM encryption</label>
+                                                </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" data-bind="visible: features.integration_openstack_nova.checked() || features.integration_openstack_glance.checked() || features.integration_openstack_barbican.checked() || features.integration_kmip.checked()">
+                                                <label>Integrations</label>
+                                                <div class="checkbox" data-bind="visible: features.integration_openstack_nova.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.integration_openstack_nova.checked" disabled/>OpenStack Nova &amp; Horizon</label>
+                                                    <!-- <p>Nova trust scheduler and patches to Horizon to expose trust in dashboard</p> -->
+                                                </div>
+                                                <div class="checkbox" data-bind="visible: features.integration_openstack_glance.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.integration_openstack_glance.checked" disabled>OpenStack Glance</label>
+                                                    <!-- <p>Nova trust scheduler and patches to Horizon to expose trust in dashboard</p> -->
+                                                </div>
+                                                <div class="checkbox" data-bind="visible: features.integration_openstack_barbican.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.integration_openstack_barbican.checked" disabled>OpenStack Barbican Key Server</label>
+                                                    <!-- <p>Use OpenStack Barbican as the key server for VM encryption</p> -->
+                                                </div>
+                                                <div class="checkbox" data-bind="visible: features.integration_kmip.checked">
+                                                    <label><input type="checkbox" data-bind="checked: features.integration_kmip.checked" disabled>KMIP-compatible Key Server</label>
+                                                    <!-- <p>Use a KMIP-compatible key server for VM encryption</p> -->
+                                                </div>
+                                                </div>
+                                            </div>
                                             </div>
                                         </form>
                                     </div>
