added compatibility note to start screen

--- a/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
+++ b/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
@@ -126,7 +126,7 @@
                                     <p>All-in-one installation must be done on a host that has OpenStack Nova already installed</p>
                                     <p>VM Integrity and VM Encryption features require OpenStack Linux compute nodes</p>
                                     <!--
-                                    <p>Host attestation features require Linux KVM, Linux Xen, Citrix Xen, or VMware ESXi compute nodes</p>
+                                    <p>Host attestation features require Linux KVM, Linux Xen, Citrix Xen, or VMware ESXi compute nodes and is supported on Ubuntu 14.04 and RedHat Enterprise Linux 7.</p>
                                     <h3>Load balancing and high availability</h3>
                                     <p>These configurations are not currently supported</p>
                                     -->
