--- a/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
+++ b/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
@@ -460,7 +460,6 @@
                                                     <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: kms_barbican_url"/>
                                                         <p>Example: http://openstack.example.com:9311</p>
                                                     </div>
-
                                                 </div>
                                             </form>
                                         </div>
@@ -510,14 +509,22 @@
                                             <p data-bind="visible: environment.network_role() === 'SUBSCRIBER'">Details available from Cloud Service Provider</p>
                                             <form  data-bind="with: settings">
                                                 <div class="form-group col-lg-12" style="padding-left: 0px;">
+                                                    <label class="col-lg-3">Glance Server URL</label>
+                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_url"/></div>
+                                                </div>
+                                                <div class="form-group col-lg-12" style="padding-left: 0px;">
+                                                    <label class="col-lg-3">Keystone Server URL</label>
+                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_keystone_url"/></div>
+                                                </div>
+                                                <!--<div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">Hostname or IP address</label>
                                                     <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_host"/></div>
-                                                    <!-- <span data-bind="visible: director_glance_host.error, text: director_glance_host.faults()"></span> -->
+                                                     <span data-bind="visible: director_glance_host.error, text: director_glance_host.faults()"></span> 
                                                 </div>
                                                 <div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">Port Number</label>
                                                     <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_port"/></div>
-                                                </div>
+                                                </div>-->
                                                 <div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">Username</label>
                                                     <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_username"/></div>
@@ -1476,8 +1483,10 @@
                     "director_port_http": ko.observable(""),
                     "director_port_https": ko.observable(""),
                     "director_tls_cert_sha1": ko.observable(""),
-                    "director_glance_host": ko.observable(""), // .extend({faults: "director_glance_host"}),
-                    "director_glance_port": ko.observable("9292"), // openstack default port for glance api. reference: http://docs.openstack.org/kilo/config-reference/content/firewalls-default-ports.html
+                    "director_glance_url": ko.observable(""),
+                    "director_keystone_url": ko.observable(""),
+//                    "director_glance_host": ko.observable(""), // .extend({faults: "director_glance_host"}),
+//                    "director_glance_port": ko.observable("9292"), // openstack default port for glance api. reference: http://docs.openstack.org/kilo/config-reference/content/firewalls-default-ports.html
                     "director_glance_username": ko.observable(""),
                     "director_glance_password": ko.observable(""),
                     "director_glance_tenant": ko.observable(""),
