--- a/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
+++ b/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
@@ -528,11 +528,15 @@
                                             <form  data-bind="with: settings">
                                                 <div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">Glance Server URL</label>
-                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_url"/></div>
+                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_url"/>
+                                                        <p>Example: http://glance.example.com:9292</p>
+                                                    </div>
                                                 </div>
                                                 <div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">Keystone Server URL</label>
-                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_keystone_url"/></div>
+                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_keystone_url"/>
+                                                        <p>Example: http://keystone.example.com:5000</p>
+                                                    </div>
                                                 </div>
                                                 <!--<div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">Hostname or IP address</label>
@@ -553,7 +557,9 @@
                                                 </div>
                                                 <div class="form-group col-lg-12" style="padding-left: 0px;">
                                                     <label class="col-lg-3">OpenStack Tenant Name</label>
-                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_tenant"/></div>
+                                                    <div class="col-lg-4"><input class="form-control input-sm" data-bind="value: director_glance_tenant"/>
+                                                        <p>Example: service</p>
+                                                    </div>
                                                 </div>
                                             </form>
                                         </div>
