added owner information to each order to restrict access

--- a/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
+++ b/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
@@ -1875,7 +1875,7 @@
                             else {
                                 // schedule periodic progress checks
                                 self.progress.links.status = responseJsonContent.links.status;
-                                self.progress.links.export(responseJsonContent.links.export);
+                                self.progress.links.export(responseJsonContent.links.export + "?token="+ mainViewModel.loginViewModel.userProfile.authorizationToken() ); // must add session token to this link or else server will block access
                                 self.progress.links.cancel = responseJsonContent.links.cancel;
                                 self.progress.interval = setInterval(self.checkProgress, self.progress.interval_period); // check progress every "interval period" milliseconds
                             }
