dev-cit-3.1: updated openstack version support text

--- a/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
+++ b/features/cit-quickstart-wizard/src/main/html5/mtwilson-core-html5/content/wizard.html
@@ -122,7 +122,7 @@
                                 <div class="well"> 
                                     <p>This wizard will guide you through the steps necessary to deploy Intel&reg; Cloud Integrity Technology 3.0</p>
                                     <h3>System Requirements</h3>
-                                    <p>OpenStack Extensions require OpenStack Juno or Kilo</p>
+                                    <p>OpenStack Extensions require OpenStack Kilo or Liberty</p>
                                     <p>All-in-one installation must be done on a host that has OpenStack Nova already installed</p>
                                     <p>VM Integrity and VM Encryption features require OpenStack Linux compute nodes</p>
                                     <!--
